--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,7 @@ dependencies {
 	implementation "org.springframework.boot:spring-boot-starter-reactor-netty"
 	implementation "org.springframework.boot:spring-boot-starter-websocket"
 	implementation "org.springframework.boot:spring-boot-starter-thymeleaf"
+	implementation group: 'org.webjars', name: 'stomp-websocket', version: '2.3.3-1'
 }
 
 tasks.named('test') {
